--- a/live.html
+++ b/live.html
@@ -7,66 +7,65 @@
 </head>
 
 <body>
+
 <div id="container">
-  <div id="live_background">
-    <div id="home_button"><a href="index.html"><img src="Exported Slices/images/home_button.jpg" width="67" height="25" alt="home" /></a></div>
-    <div id="live_button"><img src="Exported Slices/images/live_button1.jpg" width="40" height="25" alt="live" /></div>
-    <div id="live_text_column_1">
-      <h4>2011</h4>
-      <p>For booking enquiries, please contact bookings@experimental-electronic.com</p>
-      <h4>24.07.11 - 15.08.11</h4>
-      <p>European Tour <br />
-        Experimental laptop and prepared guitar tour visiting Paris, Den Haag, Amsterdam, Berlin, Hamburg, Frankfurt and Stockholm featuring collaborations with local artists.</p>
-      <h4>10.06.11 + 11.06.11</h4>
-      <p>Dylan Ross Live at Eden Festival<br />
-        Eden Festival,<br />
-        Dumfries and Galloway<br />
-      </p>
-      <h4>08.06.11</h4>
-      <p>Dylan Ross Live with Brittonie Fletcher<br />
-        the Forest Cafe,<br />
-        Edinburgh<br />
-      </p>
-      <h4>25.05.11</h4>
-      <p>Dylan Ross Live<br />
-        Cafe Renroc,<br />
-      Edinburgh</p>
+<div id="live_background">
+<div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" alt="home" width="67" height="25" /></a></div>
+<div id="live_button"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/live_button1.jpg" alt="live" width="40" height="25" /></div>
+<div id="live_text_column_1">
+For booking enquiries, please contact bookings@experimental-electronic.com
+<h4>12.12.11</h4>
+Dylan Ross Live
+Alison House,
+University of Edinburgh
+<h4>22.10.11</h4>
+Flags of a Dead Ship Live at Sound Festival
+The Lemon Tree,
+Aberdeen
+<h4>11.09.11</h4>
+Dylan Ross supports Talvihorros and Matthew Collings
+The Banshee Labyrinth,
+Edinburgh
+<h4>24.08.11</h4>
+Dylan Ross Live at UNIQUEbeats Festival
+UNIQUEbeats Festival,
+Edinburgh
+<h4>24.07.11 - 15.08.11</h4>
+European Tour
+
+Experimental laptop and prepared guitar tour visiting Paris, Den Haag, Amsterdam, Berlin, Hamburg, Frankfurt and Stockholm featuring collaborations with local artists.
+<h4>10.06.11 + 11.06.11</h4>
+Dylan Ross Live at Eden Festival
+Eden Festival,
+Dumfries and Galloway
+</div>
+<div id="live_text_column_2">
 <h4>18.05.11</h4>
-      <p>Flags of a Dead Ship Live at E.C.A.<br />
-        Edinburgh College of Art,<br />
-        Edinburgh</p>
-      <h4>16.05.11</h4>
-      <p>Dylan Ross Live<br />
-        Mono Records,<br />
-        Glasgow</p>
-    </div>
-    <div id="live_text_column_2">
-      <h4>15.05.11</h4>
-        <p>Dylan Ross live with Sam Moses<br />
-        the Forest Cafe,<br />
-        Edinburgh</p>
-      <h4>14.05.11</h4>
-        <p>Dylan Ross Live<br />
-        Axo Gallery,<br />
-        Edinburgh        </p>
-      <h4>07.05.11</h4>
-        <p>Edinburgh League of Comics' Drop In and Draw<br />
-        Newington Library,<br />
-        Edinburgh<br />
-        Comic drawing event. Hope Park Book One will be available for sale.</p>
-      <h4>01.05.11</h4>
-        <p>PLASTICKFORK- <br />
-          Dylan Ross and Mean Time 
-          Between Failures (Diemo Schwarz)<br />
-          the Forest Cafe,<br />
-        Edinburgh</p>
+Flags of a Dead Ship Live at E.C.A.
+Edinburgh College of Art,
+Edinburgh
+<h4>16.05.11</h4>
+Dylan Ross Live
+Mono Records,
+Glasgow
+<h4>14.05.11</h4>
+Dylan Ross Live
+Axo Gallery,
+Edinburgh
+<h4>01.05.11</h4>
+PLASTICKFORK-
+Dylan Ross and Mean Time
+Between Failures (Diemo Schwarz)
+the Forest Cafe,
+Edinburgh
 <h4>31.03.11</h4>
-        <p>GRIND SIGHT OPEN EYE- <br />
-          DJ Sniff  and C. Spencer Yeh// support by Dylan Ross<br />
-          Inspace,<br />
-          Edinburgh</p>
+GRIND SIGHT OPEN EYE-
+DJ Sniff and C. Spencer Yeh// support by Dylan Ross
+Inspace,
+Edinburgh
 </div>
-  </div>
 </div>
+</div>
+
 </body>
 </html>
