fixed broken home link on live and bio

--- a/live.html
+++ b/live.html
@@ -10,7 +10,7 @@
 
 <div id="container">
 <div id="live_background">
-<div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" alt="home" width="67" height="25" /></a></div>
+<div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" alt="home" width="67" height="25" /></a></div>
 <div id="live_button"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/live_button1.jpg" alt="live" width="40" height="25" /></div>
 <div id="live_text_column_1">
 For booking enquiries, please contact bookings@experimental-electronic.com
