updated comic page

--- a/comic.html
+++ b/comic.html
@@ -24,9 +24,10 @@ a {
 </head>
 
 <body link="#888888" vlink="#888888" alink="#888888">
+
 <div id="container">
   <div id="comic_background">
-    <div id="home_button"><a href="index.html"><img src="Exported Slices/images/home_button.jpg" width="67" height="25" alt="home" /></a></div> 
+    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div> 
     <div id="comic_text_column_1">
       <p>Hope Park is a semi-autobiographical portrayal of depression, told from the standpoint of a nameless, faceless individual. This protagonist's subjective reality is bared poignantly through a fractured narrative and minimal artwork. Printed on transparent pages, elements interact and bleed into one another- calling for the reader to dissect and explore.<br />
       </p>
@@ -44,12 +45,12 @@ a {
         Digital Copy- £2.50<br />
         Physical Copy (released 20th May)- £8.00 p+p inclusive</p>
     </div>
-    <div id="buy_links"><a href="http://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=purchases%40experimental%2delectronic%2ecom&lc=GB&item_name=Experimental%20Electronic&item_number=HPBOPHYS&amount=8%2e00&currency_code=GBP&currency_code=GBP&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Purchase Physical Copy</a><br />
+    <div id="buy_links"><a href="http://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=purchases%40experimental%2delectronic%2ecom&amp;lc=GB&amp;item_name=Experimental%20Electronic&amp;item_number=HPBOPHYS&amp;amount=8%2e00&amp;currency_code=GBP&amp;currency_code=GBP&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Purchase Physical Copy</a><br />
       <br />
-      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=purchases%40experimental%2delectronic%2ecom&lc=GB&item_name=Experimental%20Electronic&item_number=HPBODIGI&amount=2%2e50&currency_code=GBP&currency_code=GBP&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Purchase Digital Copy</a>
+      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=purchases%40experimental%2delectronic%2ecom&amp;lc=GB&amp;item_name=Experimental%20Electronic&amp;item_number=HPBODIGI&amp;amount=2%2e50&amp;currency_code=GBP&amp;currency_code=GBP&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Purchase Digital Copy</a>
       <br />
       <br />
-      <a href="http://issuu.com/dylanross/docs/hope_park_issue_1">Preview  Digital Exerpt</a>
+      <a href="https://dl.dropbox.com/s/ttrmyn8ey3toiqv/Preview%20Pack.zip?dl=1">Download the free Preview Pack</a>
     </div>
   </div>
 </div>
