updated software page

--- a/software.html
+++ b/software.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
+
 <div id="container">
-  <div id="software_background"><img src="Exported Slices/images/SoftwareBackground.jpg" width="935" height="900" />
-    <div id="home_button"><a href="index.html"><img src="Exported Slices/images/home_button.jpg" width="67" height="25" alt="home" /></a></div>
+  <div id="software_background">
+    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="software_text_column_1">
-      <p>I make extensive use of Ableton Live and Max/ MSP/ Jitter as well as the Max for Live crossover when creating music.
+      <p>I use Ableton Live, Max, SuperCollider and Puredata when creating music and video.
         <br />
-        I also use Max/ MSP/ Jitter when working with video. <br />
-      I use both self-made patches and plug-ins as well as official and user-made software. A standalone version of my current Max performance patch along with some of my older Max patches will be available for download on this page soon.</p>
+      I use both self-made patches as well as official and user-made software. An old Pd performance patch is provided for download as part of my preview pack, available <a href="https://dl.dropbox.com/s/ttrmyn8ey3toiqv/Preview%20Pack.zip?dl=1" title="Preview Pack">here</a>.</p>
+<br />
+My full set of neural models and networks for music and video will be available soon.
 </div>
   </div>
 </div>
