comic home link fixed

--- a/comic.html
+++ b/comic.html
@@ -27,7 +27,7 @@ a {
 
 <div id="container">
   <div id="comic_background">
-    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div> 
+    <div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div> 
     <div id="comic_text_column_1">
       <p>Hope Park is a semi-autobiographical portrayal of depression, told from the standpoint of a nameless, faceless individual. This protagonist's subjective reality is bared poignantly through a fractured narrative and minimal artwork. Printed on transparent pages, elements interact and bleed into one another- calling for the reader to dissect and explore.<br />
       </p>
