fixed software home button

--- a/software.html
+++ b/software.html
@@ -10,7 +10,7 @@
 
 <div id="container">
   <div id="software_background">
-    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
+    <div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="software_text_column_1">
       <p>I use Ableton Live, Max, SuperCollider and Puredata when creating music and video.
         <br />
