software page updated

--- a/software.html
+++ b/software.html
@@ -12,11 +12,12 @@
   <div id="software_background">
     <div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="software_text_column_1">
-      <p>I use Ableton Live, Max, SuperCollider and Puredata when creating music and video.
-        <br />
-      I use both self-made patches as well as official and user-made software. An old Pd performance patch is provided for download as part of my preview pack, available <a href="https://dl.dropbox.com/s/ttrmyn8ey3toiqv/Preview%20Pack.zip?dl=1" title="Preview Pack">here</a>.</p>
+      <p>I use Ableton Live, MaxMSP, Puredata, JavaScript and Java 
+      for creative purposes, and try to use handwritten code wherever feasible. 
+      Live sets, Max / Puredata patches, and JavaScript / Java code will be posted 
+      here soon.</p>
 <br />
-My full set of neural models and networks for music and video will be available soon.
+
 </div>
   </div>
 </div>
