updated music and bio

--- a/music.html
+++ b/music.html
@@ -16,7 +16,7 @@
     </div>
     <div id="music_text_column_2">The Trains EP was my first serious electronic endeavour. I was getting to grips with ableton live, which lead to the EP’s somewhat loop-based nature.  The premise for this EP is quite simple- it’s a soundtrack for being in a train station or on a train. In these situations I feel both optimistic due to travelling, but also wary of the mass of strangers around me and the uncertainty ahead. </div>
     <div id="music_text_column_3">This release has a very personal theme. It deals with the emotions felt after the loss of a child. All of the pieces are improvised and have had no subsequent editing. The plan was to capture a raw, affecting sound. In preparation for the project I developed programming and hardware that would allow me to be much more &quot;hands-on&quot; with live creation of electronic music. I began utilising live guitar more regularly, and eventually I built my  prepared/ tabletop guitar which allows me to both interface with programming and produce interesting sounds for the programming to act upon with minimal keyboard and mouse use. This approach allowed me to realise my vision for the threnody- one of personal, emotional and relatable electronic music. </div>
-    <div id="preview_pack"><a href="http://dl.dropbox.com/u/37959183/Preview%20Pack/Preview%20Pack.zip">Download the free Preview Pack</a></div>
+    <div id="preview_pack"></div>
   </div>
 </div>
 </body>
