--- a/live.html
+++ b/live.html
@@ -15,9 +15,9 @@
 <div id="live_text_column_1">
 For booking enquiries, please contact bookings@experimental-electronic.com
 <h4>12.12.11</h4>
-Dylan Ross Live
-Alison House,
-University of Edinburgh
+Dylan Ross Live<br>
+Alison House,<br>
+University of Edinburgh<br>
 <h4>22.10.11</h4>
 Flags of a Dead Ship Live at Sound Festival
 The Lemon Tree,
