added more breaks

--- a/live.html
+++ b/live.html
@@ -19,24 +19,24 @@ Dylan Ross Live<br>
 Alison House,<br>
 University of Edinburgh<br>
 <h4>22.10.11</h4>
-Flags of a Dead Ship Live at Sound Festival
-The Lemon Tree,
-Aberdeen
+Flags of a Dead Ship Live at Sound Festival<br>
+The Lemon Tree,<br>
+Aberdeen<br>
 <h4>11.09.11</h4>
-Dylan Ross supports Talvihorros and Matthew Collings
-The Banshee Labyrinth,
-Edinburgh
+Dylan Ross supports Talvihorros and Matthew Collings<br>
+The Banshee Labyrinth,<br>
+Edinburgh<br>
 <h4>24.08.11</h4>
-Dylan Ross Live at UNIQUEbeats Festival
-UNIQUEbeats Festival,
-Edinburgh
+Dylan Ross Live at UNIQUEbeats Festival<br>
+UNIQUEbeats Festival,<br>
+Edinburgh<br>
 <h4>24.07.11 - 15.08.11</h4>
-European Tour
+European Tour<br><br>
 
-Experimental laptop and prepared guitar tour visiting Paris, Den Haag, Amsterdam, Berlin, Hamburg, Frankfurt and Stockholm featuring collaborations with local artists.
-<h4>10.06.11 - 11.06.11</h4>
-Dylan Ross Live at Eden Festival
-Eden Festival,
+Experimental laptop and prepared guitar tour visiting Paris, Den Haag, Amsterdam, Berlin, Hamburg, Frankfurt and Stockholm featuring collaborations with local artists.<br>
+<h4>10.06.11 - 11.06.11</h4><br>
+Dylan Ross Live at Eden Festival<br>
+Eden Festival,<br>
 Dumfries and Galloway
 </div>
 <div id="live_text_column_2">
