--- a/live.html
+++ b/live.html
@@ -41,28 +41,28 @@ Dumfries and Galloway
 </div>
 <div id="live_text_column_2">
 <h4>18.05.11</h4>
-Flags of a Dead Ship Live at E.C.A.
-Edinburgh College of Art,
-Edinburgh
+Flags of a Dead Ship Live at E.C.A.<br>
+Edinburgh College of Art,<br>
+Edinburgh<br>
 <h4>16.05.11</h4>
-Dylan Ross Live
-Mono Records,
-Glasgow
+Dylan Ross Live<br>
+Mono Records,<br>
+Glasgow<br>
 <h4>14.05.11</h4>
-Dylan Ross Live
-Axo Gallery,
-Edinburgh
+Dylan Ross Live<br>
+Axo Gallery,<br>
+Edinburgh<br>
 <h4>01.05.11</h4>
-PLASTICKFORK-
+PLASTICKFORK-<br>
 Dylan Ross and Mean Time
-Between Failures (Diemo Schwarz)
-the Forest Cafe,
-Edinburgh
+Between Failures (Diemo Schwarz)<br>
+the Forest Cafe,<br>
+Edinburgh<br>
 <h4>31.03.11</h4>
-GRIND SIGHT OPEN EYE-
-DJ Sniff and C. Spencer Yeh// support by Dylan Ross
-Inspace,
-Edinburgh
+GRIND SIGHT OPEN EYE-<br>
+DJ Sniff and C. Spencer Yeh// support by Dylan Ross<br>
+Inspace,<br>
+Edinburgh<br>
 </div>
 </div>
 </div>
