--- a/music.html
+++ b/music.html
@@ -10,6 +10,7 @@
 <div id="container">
   <div id="music_background">
     <div id="home_button"><a href="index.html"><img src="Exported Slices/images/home_button.jpg" width="67" height="25" alt="home" /></a></div>
+    <div id="home_button"><a href="index.html"><img src="Exported Slices/images/music_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="music_text_column_1">
       <p>Skhizein takes its name from the greek root meaning &ldquo;to split&rdquo;. The three pieces presented are investigate a central theme- the isolation from reality felt as somebody turns in on themselves. The artwork features an icebreaker ship stuck in ice- it has completely lost its function. At the time of writing the music, I had that feeling on an almost daily basis. To me, it&rsquo;s quite a claustrophobic sound.</p>
       <p>Many of the max for live devices found elsewhere on this site were developed during this period. These were some of my first pieces not to use any &ldquo;artificial&rdquo; sounds- everything you hear is originally taken from real instruments. </p>
