--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<p class="p1">&lt;html&gt;</p>
+<p class="p1">&lt;html xmlns="http://www.w3.org/1999/xhtml"&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
 <p class="p2"><br></p>
