--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <p class="p1">&lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"&gt;</p>
 <p class="p1">&lt;html xmlns="http://www.w3.org/1999/xhtml"&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
+<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;body&gt;</p>
