--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <p class="p1">&lt;html xmlns="http://www.w3.org/1999/xhtml"&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /&gt;</p>
+<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;title&gt;TESTPAGE&lt;/title&gt;</p>
+<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;link href="Styles/retina.css" rel="stylesheet" type="text/css" /&gt;</p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-tab-span">	</span>&lt;body&gt;</p>
