--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 	<head>
-		<title></title>
+		<title>Test Website</title>
 	</head>
 	
 	<body>
-		Hello!!!
+		<div id="container">
+			<div id="text">Hello!!!</div>
+			<img id="img1" src="Images/block.png">
+		</div>
 	</body>
 </html>
