removed links etc.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 	<body>
 		<div id="container">
 			<div id="background">
-    				<div id="home_button"><img src="Exported Slices/images/home_button.jpg" alt="home" width="67" height="25" /></div>
+				<H1>UNDER CONSTRUCTION!</H1>
+    			    <!--<div id="home_button"><img src="Exported Slices/images/home_button.jpg" alt="home" width="67" height="25" /></div>
 				<div id="bio_button"><a href="bio.html"><img src="Exported Slices/images/bio_button.jpg" alt="bio" width="37" height="25" /></a></div>
 				<div id="live_button"><a href="live.html"><img src="Exported Slices/images/live_button.jpg" alt="live" width="40" height="25" /></a></div>
 				<div id="music_button"><a href="music.html"><img src="Exported Slices/images/music_button.jpg" alt="music" width="71" height="24"></a></div>
 				<div id="comic_button"><a href="comic.html"><img src="Exported Slices/images/comic_button.jpg" alt="comic" width="71" height="24" /></a></div>
-				<div id="software_button"><a href="software.html"><img src="Exported Slices/images/software_button.jpg" alt="software" width="105" height="26" /></a></div>
+				<div id="software_button"><a href="software.html"><img src="Exported Slices/images/software_button.jpg" alt="software" width="105" height="26" /></a></div>-->
 			</div>
 		</div>
 	</body>
