fixed style problem

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>dylan ross</title>
-		<!--<link href="Styles/experimental-electronic.css" rel="stylesheet" type="text/css" />-->
+		<link href="Styles/experimental-electronic.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
