--- a/sonhh.html
+++ b/sonhh.html
@@ -28,6 +28,7 @@
 			osc.frequency.value = 1000;
 			osc.connect(context.destination);
 			osc.noteOn && osc.noteOn(0);
+			osc.frequency.value = 500;
 		}
 
 		</script>
