--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>dylan ross</title>
-		<link href="Styles/experimental-electronic.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
 		<div id="container">
 			<div id="background">
-    			    	<div id="home_button"><img src="Exported Slices/images/home_button.jpg" alt="home" width="67" height="25" /></div>
-				<div id="bio_button"><a href="bio.html"><img src="Exported Slices/images/bio_button.jpg" alt="bio" width="37" height="25" /></a></div>
-				<div id="live_button"><a href="live.html"><img src="Exported Slices/images/live_button.jpg" alt="live" width="40" height="25" /></a></div>
-				<div id="music_button"><a href="music.html"><img src="Exported Slices/images/music_button.jpg" alt="music" width="71" height="24"></a></div>
-				<div id="comic_button"><a href="comic.html"><img src="Exported Slices/images/comic_button.jpg" alt="comic" width="71" height="24" /></a></div>
-				<div id="software_button"><a href="software.html"><img src="Exported Slices/images/software_button.jpg" alt="software" width="105" height="26" /></a></div>
+    			    	<div id="home_button" style="background-color:yellow;width:500px;height:100px;border:1px solid #000"></div>
 			</div>
 		</div>
 	</body>
