--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="container">
 			<div id="background">
-    			    	<div id="home_button" style="background-color:yellow;width:500px;height:100px;border:1px solid #000"></div>
+    			    	<div style="background-color:black;width:400px;height:400px;"></div>
 			</div>
 		</div>
 	</body>
