--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 	<body>
 		<div id="container">
-			<div id="background">
+			<div id="background" style="width:800px;height:400px">
     			    	<div style="background-color:black;width:400px;height:400px;"></div>
+    			    	<div style="background-color:white;width:200px;height:400px;"></div>
+    			    	<div style="background-color:black;width:200px;height:400px;"></div>
 			</div>
 		</div>
 	</body>
