--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 	<body>
 		<div id="container">
-			<div id="background" style="width:900px;height:500px">
-				<div style="text-align:left;background-color:black;width:400px;height:400px;"></div>
-				<div style="text-align:left;background-color:white;width:200px;height:400px;"></div>
-				<div style="text-align:left;background-color:black;width:200px;height:400px;"></div>
+			<div id="background" style="text-align:left;width:900px;height:500px">
+				<div style="background-color:black;width:400px;height:400px;"></div>
+				<div style="background-color:white;width:200px;height:400px;"></div>
+				<div style="background-color:black;width:200px;height:400px;"></div>
 			</div>
 		</div>
 	</body>
