added construction warning

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 
 	<body>
 		<div id="container">
-			<div id="background" style="text-align:left;width:900px;height:500px">
-				<div style="background-color:black;width:400px;height:400px;"></div>
-				<div style="background-color:white;width:200px;height:400px;"></div>
-				<div style="background-color:black;width:200px;height:400px;"></div>
-			</div>
+			UNDER CONSTRUCTION
 		</div>
 	</body>
 </html>
