--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>dylan ross</title>
-	</head>
+<!doctype html>
 
-	<body>
-		<div id="container">
-			UNDER CONSTRUCTION
-		</div>
-	</body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>DYLAN ROSS</title>
+  <meta name="description" content="Dylan's homepage">
+  <meta name="author" content="Dylan Ross">
+
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+	<script src="js/scripts.js"></script>
+
+	<div class="home_background" background="images/background_stars.jpg"> 
+	<div id="home_float">
+		<img id="DMR_img" src="images/DMR_crop.png">
+		<img id="DMR_glitter" src="images/DMR_banner.gif">
+		ABOUT | PUBLICATIONS | TEACHING | MUSIC | OTHER BITS
+		<br>
+		COMING SOON!
+	</div>
+	</div>
+</body>
 </html>
