--- a/music.html
+++ b/music.html
@@ -24,8 +24,7 @@
 		<img id="DMR_glitter" src="images/DMR_banner.gif">
 		ABOUT | PUBLICATIONS | TEACHING | MUSIC | OTHER BITS
 		<br>
-		<br>
-		SITE UNDER CONSTRUCTION - MORE INFO COMING SOON!
+		COMING SOON!
 	</div>
 	</div>
 </body>
