added links to splash

--- a/about.html
+++ b/about.html
@@ -18,13 +18,22 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="home_background" background="images/background_stars.jpg"> 
+	<div class="about_background" background="images/background_stars.jpg"> 
 	<div id="home_float">
-		<img id="DMR_img" src="images/DMR_crop.png">
+		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
 		<img id="DMR_glitter" src="images/DMR_banner.gif">
-		ABOUT | PUBLICATIONS | TEACHING | MUSIC | OTHER BITS
+		<a href="index.html">HOME</a>
+		|
+		<a href="about.html">ABOUT</a>
+		|
+		<a href="publications.html">PUBLICATIONS</a>
+		|
+		<a href="teaching.html">TEACHING</a>
+		|
+		<a href="music.html">MUSIC</a>
+		|
+		<a href="other_bits.html">OTHER BITS</a>
 		<br>
-		COMING SOON!
 	</div>
 	</div>
 </body>
