added menu links; styled link colors

--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="about_background" background="images/background_stars.jpg"> 
-	<div id="home_float">
+	<div class="about_background"> 
+	<div id="about_float">
 		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
-		<img id="DMR_glitter" src="images/DMR_banner.gif">
+		<img id="DMR_glitter" src="images/DMR_banner_static.gif">
 		<a href="index.html">HOME</a>
 		|
 		<a href="about.html">ABOUT</a>
@@ -33,7 +33,18 @@
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<br>
+		<br><br>
+		<div id="about_text">
+			<h1> ABOUT </h1>
+			My name is Dylan Ross. This is my personal website. I am a PhD student working in
+			Barbara Webb's Insect Robotics Group at the School of Informatics, University of
+			Edinburgh. I am also a member of Adam Stokes' Soft Systems Group at the same
+			University.
+			
+			<!-- I study how fruitfly larvae (maggots) wiggle about and move through their
+			environment. I ask, what are the mechanics of maggots, and how can their nervous
+			systems use this to their advantage? -->
+		</div>
 	</div>
 	</div>
 </body>
