updated css, merged new content

--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="about_background"> 
-	<div id="about_float">
-		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
-		<img id="DMR_glitter" src="images/DMR_banner_static.gif">
+	<div id="background"> 
+	<br>
+	<div id="menu">
+		<font size="5">DYLAN ROSS</font>
+		<hr width=530>
 		<a href="index.html">HOME</a>
 		|
-		<a href="about.html">ABOUT</a>
+		<a href="about.html"><b>ABOUT</b></a>
 		|
 		<a href="publications.html">PUBLICATIONS</a>
 		|
@@ -33,18 +34,48 @@
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<br><br>
-		<div id="about_text">
-			<h1> ABOUT </h1>
-			My name is Dylan Ross. This is my personal website. I am a PhD student working in
-			Barbara Webb's Insect Robotics Group at the School of Informatics, University of
-			Edinburgh. I am also a member of Adam Stokes' Soft Systems Group at the same
-			University.
-			
-			<!-- I study how fruitfly larvae (maggots) wiggle about and move through their
-			environment. I ask, what are the mechanics of maggots, and how can their nervous
-			systems use this to their advantage? -->
-		</div>
+
+		<hr width=530>
+	</div>
+
+	<div id="body">
+		My name is Dylan Ross. This is my personal website. 
+		<br>
+		<br>
+		I am a PhD student working in Barbara Webb's Insect
+		Robotics Group at the School of Informatics, University
+		of Edinburgh. I am also a member of Adam Stokes' Soft
+		Systems Group at the same University. My research is
+		focused on maggots (<i> Drosophila melanogaster </i>
+		larvae) and how they crawl around. I use classical
+		physics to describe the body of the maggot and its
+		interaction with the environment, and build
+		mathematical models describing crawling-relevant parts
+		of its brain at varying levels of abstraction.
+		<br>
+		<br>
+		I am a musician and sound engineer. I usually perform
+		using a prepared guitar and a laptop. My music is close
+		to noise, drone, and post-rock. There is usually a
+		strong emotional component to my music; hopefully that
+		comes across. I previously ran the sound team at a
+		local community arts space, <!-- TODO link --> and have
+		occasionally done session studio and external recording
+		work. I've struggled to find time for music while doing
+		my PhD, but recently started to carve out weekends and
+		evenings for practise and recording. I hope to share
+		some of the results here soon.
+		<br>
+		<br>
+		I once drew a series of comics. If I can find the time,
+		I'd love to write some more and get them up on here.
+		<!-- I study how fruitfly larvae (maggots) wiggle about
+		and move through their environment. I ask, what are the
+		mechanics of maggots, and how can their nervous systems
+		use this to their advantage? -->
+	</div>
+	<div id="footer">
+		<hr width=530>
 	</div>
 	</div>
 </body>
