--- a/alt/music.html
+++ b/alt/music.html
@@ -18,11 +18,11 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="alt_home_background"> 
-	<div id="home_float">
-		<font size="5">DYLAN ROSS</font>
-		<hr width=530>
-		<a href="alt_index.html">HOME</a>
+	<div class="about_background"> 
+	<div id="about_float">
+		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
+		<img id="DMR_glitter" src="images/DMR_banner_static.gif">
+		<a href="index.html">HOME</a>
 		|
 		<a href="about.html">ABOUT</a>
 		|
@@ -33,12 +33,9 @@
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<hr width=530>
-		<img id="DMR_img" src="images/attractor.png" height="300" width="300">
 		<br>
-		<hr width=530>
-		^ randomly generated quadratic map with lyapunov exponent &ge; 0,
-		<br> found and visualised using <a href="http://paulbourke.net/fractals/lyapunov/">this procedure</a>
+		<br>
+		UNDER CONSTRUCTION
 	</div>
 	</div>
 </body>
