--- a/alt/index.html
+++ b/alt/index.html
@@ -18,13 +18,10 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div id="background"> 
-	<br>
-	<div id="menu">
-		<font size="5">DYLAN ROSS</font>
-		<hr width=530>
-		<a href="index.html"><b>HOME</b></a>
-		|
+	<div class="home_background" background="images/background_stars.jpg"> 
+	<div id="home_float">
+		<img id="DMR_img" src="images/DMR_crop.png">
+		<img id="DMR_glitter" src="images/DMR_banner.gif">
 		<a href="about.html">ABOUT</a>
 		|
 		<a href="publications.html">PUBLICATIONS</a>
@@ -34,18 +31,9 @@
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-
-		<hr width=530>
-	</div>
-
-	<div id="body">
-		<img id="DMR_img" src="images/attractor.png" height="400" width="400">
-	</div>
-
-	<div id="footer">
-		<hr width=530>
-		^ randomly generated quadratic map with lyapunov exponent &ge; 0,
-		<br> found and visualised using <a href="http://paulbourke.net/fractals/lyapunov/">this procedure</a>
+		<br>
+		<br>
+		SITE UNDER CONSTRUCTION - MORE INFO COMING SOON!
 	</div>
 	</div>
 </body>
