--- a/old/music.html
+++ b/old/music.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Dylan's homepage">
   <meta name="author" content="Dylan Ross">
 
-  <link rel="stylesheet" href="css/styles.css">
-
+  <link rel="stylesheet" href="css/styles.css"> 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -18,22 +17,31 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="home_background" background="images/background_stars.jpg"> 
-	<div id="home_float">
-		<img id="DMR_img" src="images/DMR_crop.png">
-		<img id="DMR_glitter" src="images/DMR_banner.gif">
+	<div id="background"> 
+	<br>
+	<div id="menu">
+		<font size="5">DYLAN ROSS</font>
+		<hr width=530>
+		<a href="index.html">HOME</a>
+		|
 		<a href="about.html">ABOUT</a>
 		|
 		<a href="publications.html">PUBLICATIONS</a>
 		|
 		<a href="teaching.html">TEACHING</a>
 		|
-		<a href="music.html">MUSIC</a>
+		<a href="music.html"><b>MUSIC</b></a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<br>
-		<br>
-		SITE UNDER CONSTRUCTION - MORE INFO COMING SOON!
+		<hr width=530>
+	</div>
+
+	<div id="body">
+		This page is under construction.
+	</div>
+
+	<div id="footer">
+		<hr width=530>
 	</div>
 	</div>
 </body>
