--- a/other_bits.html
+++ b/other_bits.html
@@ -8,19 +8,19 @@
   <meta name="description" content="Dylan's homepage">
   <meta name="author" content="Dylan Ross">
 
-  <link rel="stylesheet" href="css/styles.css"> 
+  <link rel="stylesheet" href="css/styles.css">
+
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
-<body>
+<body bgcolor="#FFFFFF">
 	<script src="js/scripts.js"></script>
 
-	<div id="background"> 
-	<br>
-	<div id="menu">
-		<font size="5">DYLAN ROSS</font>
+	<div id="other_bits_background"> 
+	<div id="other_bits_menu">
+		<br>
 		<hr width=530>
 		<a href="index.html">HOME</a>
 		|
@@ -36,13 +36,25 @@
 		<hr width=530>
 	</div>
 
-	<div id="body">
-		This page is under construction.
+	<div id="other_bits_body">
+		I'm gonna use this page to dump random crap that I like (i.e.
+		welcome to my weblog)
+		<hr>
+		<img id="attractor" src="images/attractor.png"> <br>
+		^ randomly generated quadratic map with lyapunov exponent &ge; 0,
+		<br> found and visualised using <a
+			href="http://paulbourke.net/fractals/lyapunov/">this
+			procedure</a>.
+		<br> My server is continuously producing these images so you
+		may wish to refresh the page periodically.
+
 	</div>
 
 	<div id="footer">
+		<br>
 		<hr width=530>
 	</div>
 	</div>
+
 </body>
 </html>
