--- a/old/index.html
+++ b/old/index.html
@@ -18,11 +18,12 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="about_background"> 
-	<div id="about_float">
-		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
-		<img id="DMR_glitter" src="images/DMR_banner_static.gif">
-		<a href="index.html">HOME</a>
+	<div id="background"> 
+	<br>
+	<div id="menu">
+		<font size="5">DYLAN ROSS</font>
+		<hr width=530>
+		<a href="index.html"><b>HOME</b></a>
 		|
 		<a href="about.html">ABOUT</a>
 		|
@@ -33,9 +34,18 @@
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<br>
-		<br>
-		UNDER CONSTRUCTION
+
+		<hr width=530>
+	</div>
+
+	<div id="body">
+		<img id="DMR_img" src="images/attractor.png" height="400" width="400">
+	</div>
+
+	<div id="footer">
+		<hr width=530>
+		^ randomly generated quadratic map with lyapunov exponent &ge; 0,
+		<br> found and visualised using <a href="http://paulbourke.net/fractals/lyapunov/">this procedure</a>
 	</div>
 	</div>
 </body>
