--- a/old/publications.html
+++ b/old/publications.html
@@ -18,39 +18,45 @@
 <body>
 	<script src="js/scripts.js"></script>
 
-	<div class="about_background"> 
-	<div id="about_float">
-		<!-- <img id="DMR_img" src="images/DMR_crop.png"> -->
-		<img id="DMR_glitter" src="images/DMR_banner_static.gif">
+	<div id="background"> 
+	<br>
+	<div id="menu">
+		<font size="5">DYLAN ROSS</font>
+		<hr width=530>
 		<a href="index.html">HOME</a>
 		|
 		<a href="about.html">ABOUT</a>
 		|
-		<a href="publications.html">PUBLICATIONS</a>
+		<a href="publications.html"><b>PUBLICATIONS</b></a>
 		|
 		<a href="teaching.html">TEACHING</a>
 		|
 		<a href="music.html">MUSIC</a>
 		|
 		<a href="other_bits.html">OTHER BITS</a>
-		<br>
-		<br>
-	<div id="text_col">
-		Ross, D, Lagogiannis, K &amp; Webb, B 2015, 'A model of larval
+
+		<hr width=530>
+	</div>
+
+	<div id="body">
+
+		Ross, D, Lagogiannis, K &amp; Webb, B 2015, <b>'A model of larval
 		biomechanics reveals exploitable passive properties for
-		efficient locomotion'. in <i>Biomimetic and Biohybrid Systems: 4th
+		efficient locomotion'.</b> in <i>Biomimetic and Biohybrid Systems: 4th
 		International Conference, Living Machines 2015, Barcelona,
 		Spain, July 28 - 31, 2015, Proceedings </i>. Springer
 		International Publishing, pp. 1-12., 
-
+	
 		DOI :
 		<a href="http://dx.doi.org/10.1007/978-3-319-22979-9_1">
 			10.1007/978-3-319-22979-9_1</a>
 		A PDF copy of this paper is available for 
-		<a href="http://www.research.ed.ac.uk/portal/files/20035872/crawling_model.pdf">
-			open access</a>.
+		<a href="http://www.research.ed.ac.uk/portal/files/20035872/crawling_model.pdf">open access</a>.
 
 	</div>
+
+	<div id="footer">
+		<hr width=530>
 	</div>
 	</div>
 </body>
