--- a/about.html
+++ b/about.html
@@ -43,15 +43,18 @@
 		<!-- <img id="computer_gif" src="images/computer.gif", width=50px> -->
 		<br>
 		I am currently pursuing a PhD in theoretical biology, based in
-		Barbara Webb's Insect Robotics Group at the School of
-		Informatics, University of Edinburgh. I am also a member of
-		Adam Stokes' Soft Systems Group at the same University. My
-		research is focused on maggots (<i>Drosophila melanogaster</i>
-		larvae) and how they crawl around. I use classical physics to
-		describe the body of the maggot and its interaction with the
-		environment, and build mathematical models describing
-		crawling-relevant parts of its brain at varying levels of
-		abstraction.
+		Barbara Webb's <a href="https://blog.inf.ed.ac.uk/insectrobotics/">Insect
+		Robotics Group</a> at the School of Informatics, University of
+		Edinburgh. I am also a member of Adam Stokes' 
+		<a href="http://www.homepages.ed.ac.uk/astokes2/">Soft Systems Group</a>
+		at the same University. My research is focused on maggots
+		(<i>Drosophila melanogaster</i> larvae) and how they 
+		
+		<a href="https://www.youtube.com/watch?v=9mBH279vQco">
+		crawl around</a>. I use classical physics to describe the body
+		of the maggot and its interaction with the environment, and
+		build mathematical models describing crawling-relevant parts of
+		its brain at varying levels of abstraction.
 		<br>
 		<br>
 		I am a musician and sound engineer. I usually perform
@@ -59,12 +62,12 @@
 		to noise, drone, and post-rock. There is usually a
 		strong emotional component to my music; hopefully that
 		comes across. I previously ran the sound team at a
-		local community arts space, <!-- TODO link --> and have
-		occasionally done session studio and external recording
-		work. I've struggled to find time for music while doing
-		my PhD, but recently started to carve out weekends and
-		evenings for practise and recording. I hope to share
-		some of the results here soon.
+		local <a href="http://blog.theforest.org.uk/">arts space</a>,
+		and have occasionally done studio and outdoor recording work.
+		I've struggled to find time for music while doing my PhD, but
+		recently started to carve out weekends and evenings for
+		practise and recording. I hope to share some of the results
+		here soon.
 		<br>
 		<br>
 		I once drew a series of comics. If I can find the time,
