slight change to bio

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 		its brain at varying levels of abstraction.
 		<br>
 		<br>
-		I am a musician and sound engineer. I usually perform
+		I am also a musician and sound engineer. I usually perform
 		using a prepared guitar and a laptop. My music is close
 		to noise, drone, and post-rock. There is usually a
 		strong emotional component to my music; hopefully that
