removed banner ad

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 	<div id="footer">
 		<br>
 		<hr width=530>
-		<img id="singles_ad" src="images/singles_ad.gif" width=500px>
+		<!-- <img id="singles_ad" src="images/singles_ad.gif" width=500px> -->
 	</div>
 	</div>
 
